"Me" funciton complete

--- a/app/src/main/res/layout/activity_reset_password.xml
+++ b/app/src/main/res/layout/activity_reset_password.xml
@@ -7,7 +7,7 @@
     tools:context=".ResetPasswordActivity">
 
     <Button
-        android:id="@+id/Reset_button"
+        android:id="@+id/Reset_Button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="364dp"
@@ -25,7 +25,7 @@
         android:ems="10"
         android:hint="Input email here"
         android:inputType="textEmailAddress"
-        app:layout_constraintBottom_toTopOf="@+id/Reset_button"
+        app:layout_constraintBottom_toTopOf="@+id/Reset_Button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
