--- a/app/src/main/res/layout/fragment_friends.xml
+++ b/app/src/main/res/layout/fragment_friends.xml
@@ -7,9 +7,6 @@
     tools:context=".Fragment.FriendsFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".MainActivity">
@@ -29,8 +26,9 @@
                 android:id="@+id/friend_search_input"
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
-                android:layout_weight="0.7"
-                android:hint="Search friend by ID" />
+                android:layout_weight="2"
+                android:textSize="15dp"
+                android:hint="Search your friend by username" />
 
             <Button
                 android:id="@+id/friend_search_button"
@@ -38,6 +36,13 @@
                 android:layout_height="40dp"
                 android:layout_weight="0.1"
                 android:text="Search" />
+
+            <Button
+                android:id="@+id/friend_undoSearch_button"
+                android:layout_width="wrap_content"
+                android:layout_height="40dp"
+                android:layout_weight="0.1"
+                android:text="Undo" />
 
         </LinearLayout>
 
@@ -56,7 +61,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
                 android:layout_weight="0.7"
-                android:hint="Add friend by ID" />
+                android:textSize="15dp"
+                android:hint="Add new friend by email" />
 
             <Button
                 android:id="@+id/friend_addBySearch_button"
