--- a/app/src/main/res/layout/activity_add_blog.xml
+++ b/app/src/main/res/layout/activity_add_blog.xml
@@ -80,8 +80,7 @@
                 android:layout_height="300dp"
                 android:layout_gravity="center"
                 android:layout_marginTop="16dp"
-                android:layout_marginBottom="40dp"
-                />
+                android:layout_marginBottom="40dp" />
 
         </LinearLayout>
     </ScrollView>
