--- a/app/src/main/res/layout/fragment_video.xml
+++ b/app/src/main/res/layout/fragment_video.xml
@@ -4,13 +4,61 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#e0e0e0"
     tools:context=".Fragment.VideoFragment">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="This is VideoFragment."
-        android:textSize="25sp"/>
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
+        <VideoView
+            android:id="@+id/Video"
+            android:layout_width="match_parent"
+            android:layout_height="373dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <ImageButton
+            android:id="@+id/takeVideo_button"
+            android:layout_width="120dp"
+            android:layout_height="75dp"
+            android:layout_marginEnd="276dp"
+            android:layout_marginRight="276dp"
+            android:src="@drawable/baseline_video_call_black_18dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/video_describtion" />
+
+        <EditText
+            android:id="@+id/video_describtion"
+            android:layout_width="381dp"
+            android:layout_height="98dp"
+            android:layout_gravity="center"
+            android:layout_marginTop="16dp"
+            android:background="@drawable/round_input"
+            android:ems="10"
+            android:gravity="top|left"
+            android:hint="Description..."
+            android:inputType="textMultiLine"
+            android:lines="5"
+            android:padding="10dp"
+            android:scrollbars="vertical"
+            android:singleLine="false"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/Video" />
+
+        <ImageButton
+            android:id="@+id/videoSubmit_button"
+            android:layout_width="120dp"
+            android:layout_height="75dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginRight="16dp"
+            android:src="@drawable/baseline_done_outline_black_18dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/video_describtion" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </FrameLayout>
