--- a/app/src/main/res/layout/fragment_video.xml
+++ b/app/src/main/res/layout/fragment_video.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/VideoAdd"
     android:background="#e0e0e0"
     tools:context=".Fragment.VideoFragment">
 
@@ -24,10 +25,10 @@
             android:id="@+id/takeVideo_button"
             android:layout_width="120dp"
             android:layout_height="75dp"
-            android:layout_marginEnd="276dp"
-            android:layout_marginRight="276dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginLeft="16dp"
             android:src="@drawable/baseline_video_call_black_18dp"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/video_describtion" />
 
         <EditText
@@ -45,6 +46,7 @@
             android:padding="10dp"
             android:scrollbars="vertical"
             android:singleLine="false"
+            app:layout_constraintBottom_toTopOf="@+id/gallery_button"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/Video" />
@@ -57,6 +59,19 @@
             android:layout_marginRight="16dp"
             android:src="@drawable/baseline_done_outline_black_18dp"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/video_describtion" />
+
+        <ImageButton
+            android:id="@+id/gallery_button"
+            android:layout_width="120dp"
+            android:layout_height="75dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginRight="8dp"
+            android:src="@drawable/baseline_open_in_browser_black_18dp"
+            app:layout_constraintEnd_toStartOf="@+id/videoSubmit_button"
+            app:layout_constraintStart_toEndOf="@+id/takeVideo_button"
             app:layout_constraintTop_toBottomOf="@+id/video_describtion" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
