--- a/app/src/main/res/layout/message_from_row.xml
+++ b/app/src/main/res/layout/message_from_row.xml
@@ -11,7 +11,8 @@
         android:layout_width="55dp"
         android:layout_height="55dp"
         android:layout_marginLeft="10dp"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/line2"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         tools:srcCompat="@tools:sample/avatars" />
 
@@ -20,10 +21,23 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:maxWidth="240dp"
-        android:text="TextViewwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwww"
+        android:textColor="#696969"
         android:textSize="18dp"
+        android:gravity="center"
         android:layout_marginLeft="10dp"
+        android:background="@drawable/textview_round_border"
         app:layout_constraintLeft_toRightOf="@id/message_from_image"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toBottomOf="@id/line2"
+        app:layout_constraintBottom_toBottomOf="parent"/>
+
+    <View
+        android:id="@+id/line2"
+        android:layout_height="1px"
+        android:background="#32CD32"
+        android:layout_width="fill_parent"
+        android:layout_marginTop="15dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/message_from_image"
+        app:layout_constraintStart_toStartOf="parent"></View>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
