--- a/app/src/main/res/layout/message_to_row.xml
+++ b/app/src/main/res/layout/message_to_row.xml
@@ -11,10 +11,14 @@ android:layout_height="wrap_content">
     android:layout_height="wrap_content"
     android:maxWidth="240dp"
     android:layout_marginRight="10dp"
-    android:text="TextViewwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwww"
+    android:text="TextView"
+    android:textColor="#696969"
+    android:gravity="center"
     android:textSize="18dp"
+    android:background="@drawable/textview_round_border"
     app:layout_constraintRight_toLeftOf="@id/message_to_image"
-    app:layout_constraintTop_toTopOf="parent"/>
+    app:layout_constraintTop_toBottomOf="@id/line4"
+    app:layout_constraintBottom_toBottomOf="parent"/>
 
 <de.hdodenhof.circleimageview.CircleImageView
     android:id="@+id/message_to_image"
@@ -22,7 +26,18 @@ android:layout_height="wrap_content">
     android:layout_height="55dp"
     android:layout_marginRight="10dp"
     app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintTop_toTopOf="parent"
+    app:layout_constraintTop_toBottomOf="@id/line4"
+    app:layout_constraintBottom_toBottomOf="parent"
     tools:srcCompat="@tools:sample/avatars" />
+
+    <View
+        android:id="@+id/line4"
+        android:layout_height="1px"
+        android:background="#32CD32"
+        android:layout_width="fill_parent"
+        android:layout_marginTop="15dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/message_to_image"
+        app:layout_constraintStart_toStartOf="parent"></View>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
