Make some change delete video address add hint to buttons in add video fragment

--- a/app/src/main/res/layout/bloglayout.xml
+++ b/app/src/main/res/layout/bloglayout.xml
@@ -151,6 +151,8 @@
             android:layout_marginLeft="140dp"
             android:layout_toEndOf="@+id/addFriend_button"
             android:layout_toRightOf="@+id/addFriend_button"
+            android:contentDescription=""
+            android:longClickable="true"
             android:visibility="visible"
             app:srcCompat="@drawable/baseline_thumb_up_white_18dp"
             tools:visibility="visible" />
