--- a/app/src/main/res/layout/fragment_video.xml
+++ b/app/src/main/res/layout/fragment_video.xml
@@ -27,6 +27,8 @@
             android:layout_height="75dp"
             android:layout_marginStart="16dp"
             android:layout_marginLeft="16dp"
+            android:contentDescription="Take video from camera"
+            android:longClickable="true"
             android:src="@drawable/baseline_video_call_black_18dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/video_describtion" />
@@ -57,6 +59,8 @@
             android:layout_height="75dp"
             android:layout_marginEnd="16dp"
             android:layout_marginRight="16dp"
+            android:contentDescription="Submit this video"
+            android:longClickable="true"
             android:src="@drawable/baseline_done_outline_black_18dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/video_describtion" />
@@ -69,6 +73,8 @@
             android:layout_marginLeft="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginRight="8dp"
+            android:contentDescription="Take video from gallery"
+            android:longClickable="true"
             android:src="@drawable/baseline_open_in_browser_black_18dp"
             app:layout_constraintEnd_toStartOf="@+id/videoSubmit_button"
             app:layout_constraintStart_toEndOf="@+id/takeVideo_button"
