--- a/app/src/main/res/layout/videolayout.xml
+++ b/app/src/main/res/layout/videolayout.xml
@@ -98,21 +98,13 @@
         android:layout_height="15dp">
 
         <TextView
-            android:id="@+id/address"
-            android:layout_width="301dp"
-            android:layout_height="match_parent"
-            android:layout_alignParentLeft="true"
-            android:text="TextView"
-            android:textStyle="italic"
-            android:textSize="12sp"/>
-
-        <TextView
             android:id="@+id/date"
             android:layout_width="99dp"
             android:layout_height="match_parent"
-            android:layout_alignParentRight="true"
+            android:layout_alignParentLeft="true"
+            android:layout_marginLeft="2dp"
             android:text="TextView"
-            android:gravity="right"
+            android:gravity="left"
             android:textStyle="italic"
             android:textSize="12sp"/>
 
