--- a/app/src/main/res/layout/fragment_me.xml
+++ b/app/src/main/res/layout/fragment_me.xml
@@ -87,6 +87,8 @@
             android:layout_marginTop="12dp"
             android:layout_marginEnd="128dp"
             android:layout_marginRight="128dp"
+            android:contentDescription="Choose picture from camera"
+            android:longClickable="true"
             android:src="@drawable/baseline_camera_enhance_black_18dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/Reset_imageview" />
@@ -99,6 +101,8 @@
             android:layout_marginLeft="128dp"
             android:layout_marginTop="12dp"
             android:src="@drawable/baseline_face_black_18dp"
+            android:contentDescription="Choose picture from album"
+            android:longClickable="true"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/Reset_imageview" />
 
